<resources>
    <string name="app_name">Expiration Control</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="supplier">Supplier</string>
    <string name="supplier_hint">Supplier (*)</string>
    <string name="product">Product</string>
    <string name="product_hint">Product (*)</string>
    <string name="expiration">Expiration</string>
    <string name="expiration_hint">Expiration (*)</string>
    <string name="fake_date">00/00/0000</string>
    <string name="quantity">Quantity</string>
    <string name="no_products">Products not found!</string>
    <string name="loading">Loading…</string>
    <string name="suppliers">Suppliers</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="next_expirations">Upcoming</string>
    <string name="msg_supplier_name_exist">A Supplier with this name already exists!</string>
    <string name="msg_invalid_expiration_date">Expiration date is invalid!</string>
    <string name="save_error">Sorry, can\'t save this register!</string>
    <string name="permission_not_granted">Permission not granted.</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="no_button">NO</string>
    <string name="yes_button">YES</string>

    <string name="error_load_supplier">Sorry, can\'t load the Supplier!</string>
    <string name="default_date">00/00/0000</string>

    <string name="error_load_products">Can\'t load products!</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>
    <string name="msg_required_fields">Required fields not filled!</string>
    <string name="supplier_save_success">Supplier saved!</string>
    <string name="registers_not_found">Registers not found!</string>
    <string name="delete">Delete</string>
    <string name="suppliers_not_found">Suppliers not found!</string>
    <string name="error_load_product">Sorry, can\'t load product!</string>
    <string name="product_save_success">Product saved!</string>
    <string name="show_all">Show All</string>
    <string name="msg_confirm_delete_product">Do you really want to delete this product?</string>
    <string name="msg_confirm_delete_supplier">Do you really want to delete these suppliers?</string>
    <string name="msg_delete_success">Items deleted successfully!</string>

    <string name="no_products_registered">No products to list!</string>

    <string name="exit_confirm_msg">Please click BACK again to exit</string>

    <string name="title_set_expiration_days_alert">Days before Product Expiration</string>
    <string name="summary_expiration_days">Please set the days, before the product expiration, to be notified!</string>
    <string name="expiration_days_alert">expiration_days_alert</string>
    <string name="notification_alert">notification_alert</string>
    <string name="summary_expiration_notification_alert">Enable or Disable the notification!</string>
    <string name="title_expiration_notification_alert">Notification</string>
    <string name="default_expiration_days">10</string>
    <string name="barcode">Barcode</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="expired">Expired</string>
    <string name="valid_period">Valid</string>
    <string name="add_products">Add new products</string>
    <string name="searching">Searching…</string>
    <string name="period_days_alert">period_days_alert</string>
    <string name="summary_period_days_alert">Please set the interval (in days) to monitoring the product expiration!</string>
    <string name="default_period_days_alert">1</string>
    <string name="title_period_days_alert">Interval to monitoring</string>
    <string name="content_text_notification">Come see. There are some products expiring!</string>
    <string name="content_title_products_expiring">Products expiring</string>
    <string name="summary_products">A summary of your products will be listed here</string>

    <string name="admob_key">ca-app-pub-9681983966112415~4520012405</string>
    <string name="adUnitId">ca-app-pub-9681983966112415/4460550078</string>

    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_text"><![CDATA[
                <html><head>
                "<title></title>
                "</head>
                "<body>                
                "<h1 style=\"text-align: center;\">
                "<u>Privacy Policy</u></h1>
                "<div>
                "We are committed to protecting your privacy. For this reason, we do not collect any personal information in this application.</div>
                "<h3>
                "Using the Camera</h3>
                "<div>
                "The use of the camera through the application, is related solely and exclusively to capturing the bar code of the products.</div>
                "<div>
                "No other information is used through its use.</div>
                "<h3>
                "Storing information</h3>
                "<div>
                "All data registered through the application has been stored in its entirety on the smartphone itself, and is entirely the responsibility of its users.</div>
                "</body>
                "</html>"]]></string>
    <string name="product_value">Product Value</string>
    <string name="value">Val.</string>
    <string name="qty">Qty.</string>
    <string name="amount">Amount</string>
    <string name="amt">Amt.</string>
    <string name="summary">Summary</string>
    <string name="tooltip_remove_helper">Long press to delete!</string>
    <string name="label_value">Val.:</string>
    <string name="label_amt">Amt.:</string>
    <string name="label_qty">Qty.:</string>
    <string name="label_products">Products:</string>
    <string name="label_amount">Amount:</string>
    <string name="tooltip_edit">Press to edit!</string>
    <string name="options">Options</string>
    <string name="edit">Edit</string>
    <string name="tooltip_alert_helper">tooltip_alert_helper</string>
    <string name="summary_tooltip_alert_helper">Enable or Disable the Edit and Delete tip!</string>
    <string name="title_tooltip_alert_helper">Tip</string>
    <string name="required_field">This field is required!</string>
    <string name="notification">Notification</string>
    <string name="msg_delete_single_success">Item deleted successfully!</string>
    <string name="delete_menu">DELETE</string>
</resources>
