<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/expiration_days_alert"
        android:summary="@string/summary_expiration_days"
        android:defaultValue="@string/default_expiration_days"
        android:inputType="number"
        android:maxLength="3"
        android:digits="1234567890"
        android:title="@string/title_set_expiration_days_alert" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/notification_alert"
        android:summary="@string/summary_expiration_notification_alert"
        android:title="@string/title_expiration_notification_alert" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/tooltip_alert_helper"
        android:summary="@string/summary_tooltip_alert_helper"
        android:title="@string/title_tooltip_alert_helper" />

</PreferenceScreen>