<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_suppliers"
            android:icon="@drawable/ic_supplier"
            android:title="@string/suppliers" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_product"
            android:title="@string/products" />

        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_view_list"
            android:title="@string/summary" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

    <item android:title="@string/privacy">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
