<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_menu"
        android:icon="@drawable/ic_content_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/save" />

    <item
        android:id="@+id/clear_menu"
        android:icon="@drawable/ic_new"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|withText"
        android:title="@string/clear" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="300"
        app:showAsAction="ifRoom|withText"
        android:title="@string/delete_menu" />

</menu>