<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mwmobile.expirationcontrol.ui.activities.RegisterProductActivity"
    tools:showIn="@layout/activity_register_product">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/product_hint"
            android:inputType="textMultiLine"
            android:lines="5" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutExpirationDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutEndDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputProduct">

        <EditText
            android:id="@+id/txtExpirationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_calendar"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/expiration_hint"
            android:inputType="date"
            tools:text="@string/fake_date" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutExpirationDate"
        app:layout_constraintTop_toBottomOf="@+id/txtInputProduct">

        <EditText
            android:id="@+id/inputQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/quantity"
            android:inputType="date" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/lblSupplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/supplier_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutExpirationDate" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spnSupplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSupplier"
        app:ms_enableErrorLabel="false"
        app:ms_enableFloatingLabel="false"
        app:ms_multiline="false" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imbBarcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSupplier">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/inputBarCode"
            android:layout_height="wrap_content"
            android:hint="@string/barcode" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/imbBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/barcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSupplier"
        app:srcCompat="@drawable/ic_barcode_scan" />

</android.support.constraint.ConstraintLayout>
