<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mwmobile.expirationcontrol.ui.activities.RegisterSupplierActivity"
    tools:showIn="@layout/activity_register_supplier">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputSupplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/supplier_hint"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="600" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/lblSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/summary_products"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputSupplier"
        app:layout_constraintTop_toBottomOf="@+id/textInputSupplier" />

    <TextView
        android:id="@+id/lblExpProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/products"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textInputSupplier"
        app:layout_constraintTop_toBottomOf="@+id/textInputSupplier" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblExpProducts"
        app:layout_constraintTop_toBottomOf="@+id/lblExpProducts" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/contentLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/loading"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblExpProducts" />


</android.support.constraint.ConstraintLayout>
