<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/list_main_list_item">

    <TextView
        android:id="@+id/lblProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/viewExpirationStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="PRODUCT" />

    <TextView
        android:id="@+id/lblExpiration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/lblProduct"
        tools:text="@string/default_date" />

    <TextView
        android:id="@+id/lblQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/lblProduct"
        app:layout_constraintTop_toBottomOf="@+id/lblProduct"
        tools:text="0" />

    <View
        android:id="@+id/viewExpirationStatus"
        android:layout_width="16dp"
        android:layout_height="0dp"
        android:background="@color/normal_expiration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity"
        app:layout_constraintEnd_toStartOf="@+id/lblQuantity"
        app:layout_constraintTop_toBottomOf="@+id/lblProduct" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/expiration"
        app:layout_constraintStart_toStartOf="@+id/lblProduct"
        app:layout_constraintTop_toBottomOf="@+id/lblProduct" />
</android.support.constraint.ConstraintLayout>